# startuprents

./: .gitignore  COPYING.txt  MANIFEST.in  README.rst  manage.py  post_install.sh  requirements.txt  run_test.sh  setup.cfg  setup.py  site.py  test-requirements.txt  tox.ini
common/: setup.py
rents/: __init__.py  settings.py  urls.py  wsgi.py
rents/templates/admin/: base_site.html
rentsapp/: __init__.py  admin.py  models.py  tests.py  tmp.py  urls.py  views.py
rentsapp/templates/: post_detail.tpl  post_list.tpl
test/: testDjango.py
tools/: install_venv.py
