[metadata]
name = rents
summary = Rents and Booking Contributors
description-file =
    README.rst
author = Jorge Valderrama Romero
author-email = joedval@gmail.com
home-page = http://http://github.com/jvalderrma
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    rents

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html